tebakangka/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tebak
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: tebak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tebak
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - tebak
            topologyKey: kubernetes.io/hostname
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: component
                operator: In
                values:
                - consul-consul
            topologyKey: kubernetes.io/hostname
      containers:
        - name: tebak
          image: "akhfa/tebakangka:multistage"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 18080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 18080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "20m"
              memory: "55Mi"
