tebakangka/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tebak
  labels:
    app.kubernetes.io/name: tebak
    app.kubernetes.io/instance: tebak
    app.kubernetes.io/managed-by: tebak
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 18080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: tebak
